# Yandex-Email-app

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: app_builder.yml
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
