[package]
name = "yandex-email-webapp"
version = "1.0.1"
description = "Yandex mail webapp"
authors = ["ouazmir@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }


[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
tauri-plugin-store = "2.0.0-beta"
serde_json = "1"
tauri-plugin-notification = "2.0.0-beta.10"
tauri-plugin-os = "2.0.0-beta.8"

